fixed title spacing in desktop mode

--- a/src/app/components/VideoPlayer/VideoPlayer.module.css
+++ b/src/app/components/VideoPlayer/VideoPlayer.module.css
@@ -1,7 +1,7 @@
 .title {
     position: absolute;
     z-index: 100;
-    top: 15%;
+    top: 8%;
     color: #F5F5F5;
     font-size: 90px;
     font-style: normal;
